<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:text="@string/login_with_google"
        app:backgroundTint="#F5820D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="382dp"
        android:layout_height="327dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/contentTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="374dp"
        android:layout_height="335dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="21dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <Button
            android:id="@+id/getMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F5820D"
            android:text="@string/sign_message" />

        <Button
            android:id="@+id/getAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F5820D"
            android:text="@string/address" />

        <Button
            android:id="@+id/getBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F5820D"
            android:text="@string/balance" />

        <Button
            android:id="@+id/getTransaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F5820D"
            android:text="@string/send_transaction" />

        <Button
            android:id="@+id/enableMFA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F5820D"
            android:text="@string/enable_mfa" />

        <Button
            android:id="@+id/launchWalletServices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F5820D"
            android:text="@string/launch_wallet_services" />

        <Button
            android:id="@+id/signOutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            app:backgroundTint="#F5820D" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>